version/0.19/_sources/api/solver/_autosummary/settings/system_coupling.rst.txt
:orphan:

.. _system_coupling:

system_coupling
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.system_coupling.system_coupling
    :show-inheritance:

.. rubric:: Attributes

========================================================================================   ====================================================

Attribute                                                                                                                               Summary

========================================================================================   ====================================================
:ref:`htc <htc>`                                                                                       Enter the heat transfer coeficient menu.

:ref:`unsteady_statistics <unsteady_statistics>`                                                            Enter the unsteady statistics menu.

:ref:`user_defined_coupling_variables_via_udm <user_defined_coupling_variables_via_udm>`       'user_defined_coupling_variables_via_udm' child.

:ref:`use_face_or_element_based_data_transfer <use_face_or_element_based_data_transfer>`               Enable/disable face based data transfer.

========================================================================================   ====================================================

.. rubric:: Methods

==========================================   =======================================

Method                                                                       Summary

==========================================   =======================================
:ref:`write_scp_file <write_scp_file>`           Write fluent input scp file for sc.

:ref:`connect_parallel <connect_parallel>`        System coupling connection status.

:ref:`init_and_solve <init_and_solve>`           System-coupling-solve-init-command.

:ref:`solve <solve>`                                  System-coupling-solve-command.

==========================================   =======================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`models <models_1>`       'models' child.

========================   ===================

